--- a/python5Day.ipynb
+++ b/python5Day.ipynb
@@ -1468,6 +1468,607 @@
     "y = fCalc2.div()\n",
     "print(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "5237c896-c811-4740-b0f9-6d1f88c9e805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test4(n = 2, * values):\n",
+    "    for i in range(n):\n",
+    "        for value in values:\n",
+    "            print(value)\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017f92b4-8e4f-4e7d-bacc-cf415c0eb2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test4(9, \"이숭무\", \"파이썬\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae0d6ef1-33e3-43cf-8610-bec6caba56ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test4(\"안녕\", \"이숭무\", \"파이썬\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "151b1924-267a-4445-8914-4179957464a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "def test4(n = 2, values):\n",
+    "    for i in range(n):\n",
+    "        for value in values:\n",
+    "            print(value)\n",
+    "        print()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "fb316cd1-7c10-4b15-842a-79d7dc326b54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test4( * values, n = 2):\n",
+    "    for i in range(n):\n",
+    "        for value in values:\n",
+    "            print(value)\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "473f6876-fa61-49cd-806b-7d1818a4ee6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test4(\"안녕\", \"이숭무\", \"파이썬\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e39a2445-dfc3-4210-a28c-a3db6d63858a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test4(\"안녕\", \"이숭무\", \"파이썬\", n = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "e0fe9bd7-5d44-48e1-8256-4f8d01138ede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test4(n = 3, \"안녕\", \"이숭무\", \"파이썬\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "230c6002-c8d7-42f7-bda1-77517541321b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test5(x1 , x2):\n",
+    "    i = x1 + x2\n",
+    "    j = x1 * x2\n",
+    "    return i, j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "f49124d8-33ba-4941-8ac4-6ddf2d998751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 20)\n",
+      "30 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = test5(4, 5)\n",
+    "print(y)\n",
+    "a, b = test5(10, 20)\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "9dffdbe5-3f92-42ae-a1e7-9ddc00f91915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test5(x1 , x2):\n",
+    "    i = x1 + x2\n",
+    "    j = x1 * x2\n",
+    "    return i # return 함수 종료의 의미\n",
+    "    return j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "15e20790-c21d-45dc-87cf-4459d569c09a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = test5(4, 6)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "3b18e512-f99f-45a8-9a41-89f980a1c869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test6():\n",
+    "    print(\"A\")\n",
+    "    return # 함수종료의 의미가 있다.\n",
+    "    print(\"B\") # 실행되지 않는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "9ee3c3a0-9692-4615-99e0-0d0604d42264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "test6()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "b7c4df2d-7210-431a-ae92-859e6082fd9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_all(start = 0 , end= 100 , step = 1):\n",
+    "    sum1 = 0     #  1       101       1\n",
+    "    for i in range(start, end + 1 , step):\n",
+    "        sum1 += i\n",
+    "    return sum1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "412cc087-4e8e-4159-9775-e8f2e09973ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n",
+      "166108\n",
+      "2496\n",
+      "1705\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = sum_all()\n",
+    "print(result)\n",
+    "result = sum_all(50, 1000, 3)\n",
+    "print(result)\n",
+    "result = sum_all(step = 2, end= 100, start = 5)\n",
+    "print(result)\n",
+    "result = sum_all(10, step = 3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "720e9b46-fb72-4568-9f6b-58e54837eb35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def call_10_tims(func): # 함수를 전달 받는 매개변수\n",
+    "    for i in range(10):\n",
+    "        func()\n",
+    "\n",
+    "def print_hello():\n",
+    "    print(\"안녕하세요.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a39afb2d-866a-40d9-9296-ed980f9f55a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "call_10_tims(print_hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "10d9869f-a961-4813-9bfe-cb03d38374c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def power(item):\n",
+    "    return item * item\n",
+    "def under_3(item):\n",
+    "    return item < 3\n",
+    "l = [1,2,3,4,5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "503737be-34fe-4077-887f-e7df62e57e05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = map(power, l)\n",
+    "print(list(result))\n",
+    "'''\n",
+    "result = power(l)\n",
+    "print(result)\n",
+    "result = under_3(l) # l < 3\n",
+    "'''\n",
+    "result = filter(under_3, l)\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "ec125020-ea3b-4711-b0b9-5fa8b9fdfc83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "power = lambda item : item * item\n",
+    "under_3 = lambda item : item < 3\n",
+    "result = map(power, l)\n",
+    "print(list(result))\n",
+    "result = filter(under_3, l)\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "403a0555-df79-4567-a662-4e4c00e114ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = map(lambda item : item * item , l)\n",
+    "print(list(result))\n",
+    "result = filter(lambda item : item < 3 , l)\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "5ea9b88d-9457-4b87-aab7-46e4c33c6027",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['가', '나', '다', '라', '마', '바', '사', '아', '차', '카', '타', '파', '하']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "hanguls  = list(\"가나다라마바사아차카타파하\")\n",
+    "print(hanguls)\n",
+    "with open(\"info.tsv\", \"w\") as file:\n",
+    "    for i in range(1000):\n",
+    "        name = random.choice(hanguls) + random.choice(hanguls)\n",
+    "        weight = random.randrange(40, 100)\n",
+    "        height = random.randrange(140, 200)\n",
+    "        file.write(f\"{name}\\t{weight}\\t{height}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08636bd4-54c1-4950-b744-269bd1c9e427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"info.csv\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        name, weight, height = line.strip().split(\",\")\n",
+    "        if not name or not weight or not height:\n",
+    "            continue\n",
+    "        print(name, weight, height)\n",
+    "        bmi = int(weight) / int(height) * int(height)\n",
+    "        print(bmi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "id": "3c6318f4-dd2c-490f-8ecb-4f67ca3066cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "num = random.randint(0, 10)\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "id": "e4675385-23b8-4647-ad38-71eac0bbc897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mod\n",
+    "num = mod.randint(10, 20)\n",
+    "print(num)\n",
+    "calc = mod.FourCal(10, 20)\n",
+    "result = calc.add()\n",
+    "print(result)\n",
+    "calc1 = mod.fCalc2 \n",
+    "result = calc1.add()\n",
+    "print(result)\n",
+    "result = mod.fCalc2.add()\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "id": "25657302-c57d-4fbe-81c7-b1991d1df017",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mod as m\n",
+    "print(m.i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "id": "93ad17be-3335-461e-b6d2-ec393fbc4af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mod import *\n",
+    "num = randint(10, 20)\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "id": "daf08021-ef18-43fc-91b7-5d434882f0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mod import randint, i, PI\n",
+    "num = randint(10, 20)\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "id": "5782a86d-5a83-40fa-aa1e-48ced13a70a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 모듈의 변수\n",
+      "b 모듈의 변수\n"
+     ]
+    }
+   ],
+   "source": [
+    "import test_package.module_a \n",
+    "import test_package.module_b \n",
+    "print(test_package.module_a.valiable_a ) \n",
+    "print(test_package.module_b.valiable_b ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "id": "6706ed1e-3063-41c4-b77d-88b3043f2b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 모듈의 변수\n",
+      "b 모듈의 변수\n"
+     ]
+    }
+   ],
+   "source": [
+    "from test_package import *\n",
+    "print(module_a.valiable_a)\n",
+    "print(module_b.valiable_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "f6ae85c0-4be0-4828-b68c-851c89c7a22f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 모듈의 변수\n",
+      "b 모듈의 변수\n"
+     ]
+    }
+   ],
+   "source": [
+    "from test_package.module_a import *\n",
+    "from test_package.module_b import *\n",
+    "print(valiable_a)\n",
+    "print(valiable_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "325c43e1-acc6-4c02-9d4e-dd31aae92c63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 모듈의 변수\n",
+      "b 모듈의 변수\n"
+     ]
+    }
+   ],
+   "source": [
+    "import test_package.module_a as a\n",
+    "import test_package.module_b as b\n",
+    "print(a.valiable_a)\n",
+    "print(b.valiable_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "id": "2ee577aa-57b7-4b00-bbd0-eda9fcd52553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "url = \"http://uta.pw/shodou/img/28/214.png\"\n",
+    "memory = urllib.request.urlopen(url).read()\n",
+    "with open(\"test1.png\", \"wb\") as f:\n",
+    "    f.write(memory)"
+   ]
   }
  ],
  "metadata": {
