--- a/Deep4Day.ipynb
+++ b/Deep4Day.ipynb
@@ -577,6 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from PIL import Image\n",
     "# 이미지 전처리\n",
     "image_path = 'img6.jpg'\n",
     "image = Image.open(image_path)\n",
