--- a/Deep5Day.ipynb
+++ b/Deep5Day.ipynb
@@ -352,6 +352,7 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.preprocessing import sequence\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "import numpy as np\n",
     "# 데이터 불러오기\n",
     "# 학습셋, 테스트셋\n",
