--- a/Deep5Day.ipynb
+++ b/Deep5Day.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "5d783d20-810d-4b2d-99b6-1eca453c4910",
    "metadata": {},
    "outputs": [
@@ -299,47 +299,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/200\n",
-      "450/450 [==============================] - 13s 26ms/step - loss: 2.2284 - accuracy: 0.4266 - val_loss: 1.8610 - val_accuracy: 0.5129\n",
+      "450/450 [==============================] - 14s 26ms/step - loss: 2.2414 - accuracy: 0.4334 - val_loss: 1.9409 - val_accuracy: 0.5191\n",
       "Epoch 2/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.7297 - accuracy: 0.5586 - val_loss: 1.6904 - val_accuracy: 0.5708\n",
+      "450/450 [==============================] - 11s 24ms/step - loss: 1.8993 - accuracy: 0.5090 - val_loss: 1.7812 - val_accuracy: 0.5543\n",
       "Epoch 3/200\n",
-      "450/450 [==============================] - 12s 26ms/step - loss: 1.6040 - accuracy: 0.5896 - val_loss: 1.5898 - val_accuracy: 0.5980\n",
+      "450/450 [==============================] - 11s 24ms/step - loss: 1.6928 - accuracy: 0.5637 - val_loss: 1.6534 - val_accuracy: 0.5775\n",
       "Epoch 4/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.4509 - accuracy: 0.6310 - val_loss: 1.4862 - val_accuracy: 0.6291\n",
+      "450/450 [==============================] - 11s 24ms/step - loss: 1.4685 - accuracy: 0.6256 - val_loss: 1.4748 - val_accuracy: 0.6291\n",
       "Epoch 5/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.2882 - accuracy: 0.6751 - val_loss: 1.3137 - val_accuracy: 0.6728\n",
+      "450/450 [==============================] - 11s 23ms/step - loss: 1.3155 - accuracy: 0.6698 - val_loss: 1.3599 - val_accuracy: 0.6625\n",
       "Epoch 6/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.1380 - accuracy: 0.7141 - val_loss: 1.2487 - val_accuracy: 0.6883\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 1.2110 - accuracy: 0.6918 - val_loss: 1.3401 - val_accuracy: 0.6679\n",
       "Epoch 7/200\n",
-      "450/450 [==============================] - 13s 28ms/step - loss: 1.0368 - accuracy: 0.7364 - val_loss: 1.2027 - val_accuracy: 0.6995\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 1.1231 - accuracy: 0.7153 - val_loss: 1.2856 - val_accuracy: 0.6710\n",
       "Epoch 8/200\n",
-      "450/450 [==============================] - 12s 26ms/step - loss: 0.9497 - accuracy: 0.7577 - val_loss: 1.1803 - val_accuracy: 0.7084\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 1.0413 - accuracy: 0.7368 - val_loss: 1.2475 - val_accuracy: 0.6830\n",
       "Epoch 9/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.8679 - accuracy: 0.7784 - val_loss: 1.1466 - val_accuracy: 0.7133\n",
-      "Epoch 10/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.7900 - accuracy: 0.8016 - val_loss: 1.1358 - val_accuracy: 0.7240\n",
-      "Epoch 11/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.7321 - accuracy: 0.8152 - val_loss: 1.1459 - val_accuracy: 0.7280\n",
-      "Epoch 12/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.6711 - accuracy: 0.8273 - val_loss: 1.1923 - val_accuracy: 0.7226\n",
-      "Epoch 13/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.6123 - accuracy: 0.8452 - val_loss: 1.2131 - val_accuracy: 0.7182\n",
-      "Epoch 14/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.5592 - accuracy: 0.8568 - val_loss: 1.2205 - val_accuracy: 0.7231\n",
-      "Epoch 15/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 0.5100 - accuracy: 0.8703 - val_loss: 1.2692 - val_accuracy: 0.7186\n",
-      "71/71 [==============================] - 1s 11ms/step - loss: 1.2692 - accuracy: 0.7186\n"
+      "411/450 [==========================>...] - ETA: 0s - loss: 0.9708 - accuracy: 0.7589"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.7186108827590942"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -352,7 +329,7 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.preprocessing import sequence\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
     "import numpy as np\n",
     "# 데이터 불러오기\n",
     "# 학습셋, 테스트셋\n",
@@ -405,6 +382,7 @@
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "# 입력 텍스트에 대한 토크나이저 피팅 수정\n",
     "input_text = [\"오늘 출근길에 차 사고가 났습니다.\"]\n",
     "tokenizer = Tokenizer(num_words=1000)\n",
