--- a/Deep5Day.ipynb
+++ b/Deep5Day.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5d783d20-810d-4b2d-99b6-1eca453c4910",
    "metadata": {},
    "outputs": [
@@ -299,24 +299,53 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/200\n",
-      "450/450 [==============================] - 14s 26ms/step - loss: 2.2414 - accuracy: 0.4334 - val_loss: 1.9409 - val_accuracy: 0.5191\n",
+      "WARNING:tensorflow:From C:\\Users\\sdedu\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "450/450 [==============================] - 13s 25ms/step - loss: 2.1307 - accuracy: 0.4535 - val_loss: 1.8341 - val_accuracy: 0.5289\n",
       "Epoch 2/200\n",
-      "450/450 [==============================] - 11s 24ms/step - loss: 1.8993 - accuracy: 0.5090 - val_loss: 1.7812 - val_accuracy: 0.5543\n",
+      "450/450 [==============================] - 11s 24ms/step - loss: 1.7465 - accuracy: 0.5527 - val_loss: 1.6966 - val_accuracy: 0.5699\n",
       "Epoch 3/200\n",
-      "450/450 [==============================] - 11s 24ms/step - loss: 1.6928 - accuracy: 0.5637 - val_loss: 1.6534 - val_accuracy: 0.5775\n",
+      "450/450 [==============================] - 11s 24ms/step - loss: 1.6442 - accuracy: 0.5772 - val_loss: 1.5983 - val_accuracy: 0.5957\n",
       "Epoch 4/200\n",
-      "450/450 [==============================] - 11s 24ms/step - loss: 1.4685 - accuracy: 0.6256 - val_loss: 1.4748 - val_accuracy: 0.6291\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 1.4459 - accuracy: 0.6408 - val_loss: 1.4546 - val_accuracy: 0.6438\n",
       "Epoch 5/200\n",
-      "450/450 [==============================] - 11s 23ms/step - loss: 1.3155 - accuracy: 0.6698 - val_loss: 1.3599 - val_accuracy: 0.6625\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 1.2987 - accuracy: 0.6707 - val_loss: 1.3422 - val_accuracy: 0.6647\n",
       "Epoch 6/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.2110 - accuracy: 0.6918 - val_loss: 1.3401 - val_accuracy: 0.6679\n",
+      "450/450 [==============================] - 11s 24ms/step - loss: 1.1865 - accuracy: 0.6978 - val_loss: 1.2771 - val_accuracy: 0.6714\n",
       "Epoch 7/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.1231 - accuracy: 0.7153 - val_loss: 1.2856 - val_accuracy: 0.6710\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 1.0861 - accuracy: 0.7171 - val_loss: 1.2275 - val_accuracy: 0.6857\n",
       "Epoch 8/200\n",
-      "450/450 [==============================] - 11s 25ms/step - loss: 1.0413 - accuracy: 0.7368 - val_loss: 1.2475 - val_accuracy: 0.6830\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.9977 - accuracy: 0.7474 - val_loss: 1.1745 - val_accuracy: 0.7057\n",
       "Epoch 9/200\n",
-      "411/450 [==========================>...] - ETA: 0s - loss: 0.9708 - accuracy: 0.7589"
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.9213 - accuracy: 0.7660 - val_loss: 1.1903 - val_accuracy: 0.7004\n",
+      "Epoch 10/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.8504 - accuracy: 0.7868 - val_loss: 1.1586 - val_accuracy: 0.7106\n",
+      "Epoch 11/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.7822 - accuracy: 0.8036 - val_loss: 1.1546 - val_accuracy: 0.7173\n",
+      "Epoch 12/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.7217 - accuracy: 0.8187 - val_loss: 1.1483 - val_accuracy: 0.7222\n",
+      "Epoch 13/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.6694 - accuracy: 0.8320 - val_loss: 1.1819 - val_accuracy: 0.7191\n",
+      "Epoch 14/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.6111 - accuracy: 0.8465 - val_loss: 1.2012 - val_accuracy: 0.7150\n",
+      "Epoch 15/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.5601 - accuracy: 0.8594 - val_loss: 1.1950 - val_accuracy: 0.7262\n",
+      "Epoch 16/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.5143 - accuracy: 0.8707 - val_loss: 1.2259 - val_accuracy: 0.7257\n",
+      "Epoch 17/200\n",
+      "450/450 [==============================] - 11s 25ms/step - loss: 0.4679 - accuracy: 0.8825 - val_loss: 1.2787 - val_accuracy: 0.7244\n",
+      "71/71 [==============================] - 1s 11ms/step - loss: 1.2787 - accuracy: 0.7244\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7243989109992981"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -366,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "adce8a09-31b3-44d5-8906-5c328d5eef56",
    "metadata": {},
    "outputs": [
@@ -374,8 +403,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "예측된 카테고리 인덱스: 15\n"
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "예측된 카테고리 인덱스: 39\n",
+      "\n"
      ]
     }
    ],
@@ -384,7 +414,7 @@
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "# 입력 텍스트에 대한 토크나이저 피팅 수정\n",
-    "input_text = [\"오늘 출근길에 차 사고가 났습니다.\"]\n",
+    "input_text = [\"There was a car accident on my way to work this morning.\"]\n",
     "tokenizer = Tokenizer(num_words=1000)\n",
     "# X_train이 아닌 input_text에 대해 피팅하도록 변경\n",
     "tokenizer.fit_on_texts(input_text)  \n",
@@ -394,7 +424,7 @@
     "predictions = model.predict(input_sequence_padded)\n",
     "# 예측된 카테고리 인덱스 가져오기\n",
     "predicted_category_index = np.argmax(predictions[0])\n",
-    "# 인덱스를 원래 카테고리로 매핑 # 날씨 , 주식, 사회, 정치\n",
+    "# 인덱스를 원래 카테고리로 매핑 \n",
     "print(f\"예측된 카테고리 인덱스: {predicted_category_index}\")\n",
     "'''\n",
     "00 : 미국,01 : 가장자리 지역,02 : 비즈니스,03 : 과학 기술,04 : 건강,05 : 문화 및 종교\n",
