--- a/Deep6Day.ipynb
+++ b/Deep6Day.ipynb
@@ -185,10 +185,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2b402fae-9ee8-4ba4-8c74-1e102c6df85d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 160 images belonging to 2 classes.\n",
+      "Found 120 images belonging to 2 classes.\n",
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " vgg16 (Functional)          (None, 4, 4, 512)         14714688  \n",
+      "                                                                 \n",
+      " flatten_3 (Flatten)         (None, 8192)              0         \n",
+      "                                                                 \n",
+      " flatten_4 (Flatten)         (None, 8192)              0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 64)                524352    \n",
+      "                                                                 \n",
+      " activation_9 (Activation)   (None, 64)                0         \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " activation_10 (Activation)  (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 1)                 65        \n",
+      "                                                                 \n",
+      " activation_11 (Activation)  (None, 1)                 0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 15239105 (58.13 MB)\n",
+      "Trainable params: 524417 (2.00 MB)\n",
+      "Non-trainable params: 14714688 (56.13 MB)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# 전이 학습\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -228,7 +264,98 @@
     "    class_mode = 'binary'\n",
     ")\n",
     "# VGG16 모델\n",
-    "transfer_model = VGG16(weights='imagenet')"
+    "transfer_model = VGG16(weights='imagenet', include_top=False, input_shape=(150, 150, 3))\n",
+    "transfer_model.trainable=False\n",
+    "#transfer_model.summary()\n",
+    "\n",
+    "# 우리의 모델을 설정\n",
+    "finetune_model = models.Sequential()\n",
+    "finetune_model.add(transfer_model)\n",
+    "finetune_model.add(Flatten())\n",
+    "finetune_model.add(Flatten())\n",
+    "\n",
+    "finetune_model.add(Dense(64))\n",
+    "finetune_model.add(Activation('relu'))\n",
+    "finetune_model.add(Dropout(0.5))\n",
+    "finetune_model.add(Activation('relu'))\n",
+    "\n",
+    "finetune_model.add(Dense(1))\n",
+    "finetune_model.add(Activation('sigmoid'))\n",
+    "finetune_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5e494bd9-fc67-4d34-bbbf-e27b8b47f03f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "32/32 [==============================] - 9s 242ms/step - loss: 0.6138 - accuracy: 0.6562 - val_loss: 0.5602 - val_accuracy: 0.6600\n",
+      "Epoch 2/100\n",
+      "32/32 [==============================] - 8s 244ms/step - loss: 0.5313 - accuracy: 0.7375 - val_loss: 0.4014 - val_accuracy: 0.8600\n",
+      "Epoch 3/100\n",
+      "32/32 [==============================] - 8s 238ms/step - loss: 0.4422 - accuracy: 0.7875 - val_loss: 0.4609 - val_accuracy: 0.7600\n",
+      "Epoch 4/100\n",
+      "32/32 [==============================] - 8s 241ms/step - loss: 0.3736 - accuracy: 0.8313 - val_loss: 0.2836 - val_accuracy: 0.9000\n",
+      "Epoch 5/100\n",
+      "32/32 [==============================] - 8s 245ms/step - loss: 0.3225 - accuracy: 0.8625 - val_loss: 0.2256 - val_accuracy: 0.9200\n",
+      "Epoch 6/100\n",
+      "32/32 [==============================] - 8s 249ms/step - loss: 0.2744 - accuracy: 0.9062 - val_loss: 0.2993 - val_accuracy: 0.9000\n",
+      "Epoch 7/100\n",
+      "32/32 [==============================] - 8s 235ms/step - loss: 0.2686 - accuracy: 0.9125 - val_loss: 0.1745 - val_accuracy: 0.9400\n",
+      "Epoch 8/100\n",
+      "32/32 [==============================] - 7s 235ms/step - loss: 0.2146 - accuracy: 0.9563 - val_loss: 0.1988 - val_accuracy: 0.9800\n",
+      "Epoch 9/100\n",
+      "32/32 [==============================] - 8s 239ms/step - loss: 0.2122 - accuracy: 0.9312 - val_loss: 0.2302 - val_accuracy: 0.9400\n",
+      "Epoch 10/100\n",
+      "32/32 [==============================] - 8s 241ms/step - loss: 0.2078 - accuracy: 0.9312 - val_loss: 0.1517 - val_accuracy: 0.9800\n",
+      "Epoch 11/100\n",
+      "32/32 [==============================] - 7s 234ms/step - loss: 0.1924 - accuracy: 0.9312 - val_loss: 0.1729 - val_accuracy: 0.9800\n",
+      "Epoch 12/100\n",
+      "32/32 [==============================] - 8s 248ms/step - loss: 0.1972 - accuracy: 0.9375 - val_loss: 0.1722 - val_accuracy: 0.9400\n",
+      "Epoch 13/100\n",
+      "32/32 [==============================] - 8s 237ms/step - loss: 0.1758 - accuracy: 0.9625 - val_loss: 0.1267 - val_accuracy: 0.9600\n",
+      "Epoch 14/100\n",
+      "32/32 [==============================] - 7s 232ms/step - loss: 0.1404 - accuracy: 0.9500 - val_loss: 0.1785 - val_accuracy: 0.9400\n",
+      "Epoch 15/100\n",
+      "32/32 [==============================] - 7s 235ms/step - loss: 0.2211 - accuracy: 0.9062 - val_loss: 0.3170 - val_accuracy: 0.8600\n",
+      "Epoch 16/100\n",
+      "32/32 [==============================] - 7s 233ms/step - loss: 0.1257 - accuracy: 0.9812 - val_loss: 0.1832 - val_accuracy: 0.8800\n",
+      "Epoch 17/100\n",
+      "32/32 [==============================] - 7s 233ms/step - loss: 0.1623 - accuracy: 0.9312 - val_loss: 0.1170 - val_accuracy: 1.0000\n",
+      "Epoch 18/100\n",
+      "32/32 [==============================] - 9s 271ms/step - loss: 0.1572 - accuracy: 0.9438 - val_loss: 0.2178 - val_accuracy: 0.9000\n",
+      "Epoch 19/100\n",
+      "32/32 [==============================] - 8s 243ms/step - loss: 0.1355 - accuracy: 0.9563 - val_loss: 0.1555 - val_accuracy: 0.9000\n",
+      "Epoch 20/100\n",
+      "32/32 [==============================] - 7s 230ms/step - loss: 0.1239 - accuracy: 0.9625 - val_loss: 0.0958 - val_accuracy: 0.9800\n",
+      "Epoch 21/100\n",
+      "32/32 [==============================] - 7s 225ms/step - loss: 0.1154 - accuracy: 0.9563 - val_loss: 0.2512 - val_accuracy: 0.8600\n",
+      "Epoch 22/100\n",
+      "32/32 [==============================] - 7s 231ms/step - loss: 0.1109 - accuracy: 0.9688 - val_loss: 0.1000 - val_accuracy: 0.9800\n",
+      "Epoch 23/100\n",
+      "32/32 [==============================] - 7s 232ms/step - loss: 0.1065 - accuracy: 0.9750 - val_loss: 0.1142 - val_accuracy: 0.9800\n",
+      "Epoch 24/100\n",
+      "32/32 [==============================] - 7s 229ms/step - loss: 0.1286 - accuracy: 0.9688 - val_loss: 0.1137 - val_accuracy: 0.9600\n",
+      "Epoch 25/100\n",
+      "32/32 [==============================] - 7s 231ms/step - loss: 0.1190 - accuracy: 0.9688 - val_loss: 0.1446 - val_accuracy: 0.9400\n"
+     ]
+    }
+   ],
+   "source": [
+    "#모델 실행의 옵션을 설정\n",
+    "finetune_model.compile(loss=\"binary_crossentropy\", \\\n",
+    "              optimizer=optimizers.Adam(learning_rate=0.0002), metrics=['accuracy'])\n",
+    "# 학습의 조기 중단\n",
+    "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=5)\n",
+    "# 모델 학습\n",
+    "history = finetune_model.fit(train_generator, epochs=100, validation_data=test_generator, \n",
+    "                  validation_steps= 10, callbacks=[early_stopping_callback])"
    ]
   }
  ],
